fixed overflow

--- a/app/assets/stylesheets/components/_comments.css.scss
+++ b/app/assets/stylesheets/components/_comments.css.scss
@@ -29,7 +29,7 @@
   }
 
   pre {
-    overflow-x: scroll;
+    overflow-x: auto;
     white-space: pre;
     word-wrap: normal;
   }
